--- a/src/app/data-binding/data-binding.css
+++ b/src/app/data-binding/data-binding.css
@@ -27,7 +27,7 @@ body {
   width: 95%;
   text-align: center;
   border: 3px solid #8B5E3C;
-  margin-left: 600PX;
+  margin: 20px auto;
 }
 
 nav {
